--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,20 @@
+@font-face {
+    font-family: 'Ea Sports Font';
+    src: url('EASPORTS15.ttf')  format('truetype');
+  }
+
 body {
     height: 100%;
-    background-color: #3A2657;
+    background: rgb(133,61,246);
+    background: linear-gradient(122deg, rgba(133,61,246,1) 0%, rgba(158,50,249,1) 35%, rgba(189,34,250,1) 100%);
     padding: 2%;
 }
+
+.navbar {
+    background-color: transparent!important;
+    margin-bottom: 3%
+}
+
 .playerImg {
     margin: auto;
     height: 250px;
@@ -23,23 +35,23 @@ body {
 }
 
 .rc-slider-track {
-    background-color: #3A2657;
+    background-color: #9536F8;
   }
   
   .rc-slider-dot-active {  
-    border-color: #3A2657;
-    border: solid 2px #3A2657;
+    border-color: #9536F8;
+    border: solid 2px #9536F8;
   }
   
   .rc-slider-handle {
-    background-color: #3A2657;
-    border-color: #3A2657;
+    background-color: #9536F8;
+    border-color: #9536F8;
   }
   
   .rc-slider-handle:hover {
-    border-color: #3A2657;
+    border-color: #9536F8;
   }
   
   .rc-slider-handle-active:active {
-    border-color: #3A2657;
+    border-color: #9536F8;
   }
