--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,14 @@
 @font-face {
-    font-family: 'Ea Sports Font';
-    src: url('EASPORTS15.ttf')  format('truetype');
-  }
+    font-family: FIFA;
+    src: url(/assets/EASports.ttf);
+}
 
 body {
     height: 100%;
     background: rgb(133,61,246);
     background: linear-gradient(122deg, rgba(133,61,246,1) 0%, rgba(158,50,249,1) 35%, rgba(189,34,250,1) 100%);
     padding: 2%;
+    font-family: FIFA;
 }
 
 .navbar {
@@ -30,28 +31,42 @@ body {
     margin-bottom: 45%;
 }
 
+.controls_players {
+    box-shadow: 5px 10px 8px #888888;
+    margin-bottom: 10%;
+}
+
 .LeagueBarPlot{
     box-shadow: 5px 10px 8px #888888;
 }
 
 .rc-slider-track {
     background-color: #9536F8;
-  }
+}
   
-  .rc-slider-dot-active {  
+.rc-slider-dot-active {  
     border-color: #9536F8;
     border: solid 2px #9536F8;
-  }
+}
   
-  .rc-slider-handle {
+.rc-slider-handle {
     background-color: #9536F8;
     border-color: #9536F8;
-  }
+}
   
-  .rc-slider-handle:hover {
+.rc-slider-handle:hover {
     border-color: #9536F8;
-  }
+}
   
-  .rc-slider-handle-active:active {
+.rc-slider-handle-active:active {
     border-color: #9536F8;
-  }
+}
+
+.nav-link {
+    color:white;
+}
+
+.nav-link:hover{
+    color: black;
+    border: transparent;
+}
