--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,10 @@ body {
     height: 250px;
 }
 
+.attributes_card {
+    box-shadow: 5px 5px 4px #888888;
+}
+
 .card-title2 {
     text-align: end;
 }
